[gd_scene load_steps=7 format=2]

[ext_resource path="res://Leg/Leg.gd" type="Script" id=1]
[ext_resource path="res://Leg/dot.png" type="Texture2D" id=2]
[ext_resource path="res://Leg/direction_shader.tres" type="Shader" id=3]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/color = Color( 0, 1, 0, 1 )
shader_param/direction = Vector2( 1, 0 )
shader_param/speed = 1.0
shader_param/size = 4.0
shader_param/direction_texture = ExtResource( 2 )

[sub_resource type="BoxShape3D" id=4]

[node name="Leg" type="Node3D" groups=["leg"]]
script = ExtResource( 1 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( -1.74846e-07, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
transform = Transform3D( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
transform = Transform3D( 1, -5.04467e-44, 6.05024e-22, 0, 1, 8.35187e-23, -6.05024e-22, -8.35187e-23, 1, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 1.20546, 0, 0 )
visible = false
pixel_size = 0.003
fixed_size = true
text = "Test"

[connection signal="input_event" from="MeshInstance3D/Area3D" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="MeshInstance3D/Area3D" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance3D/Area3D" to="." method="_on_Area_mouse_exited"]
